# HydraMarket-Solana-Predection-Market-

./: .gitignore  Cargo.toml  package.json
apps/Frontend/: README.md  index.html  metadata.json  package-lock.json  package.json
apps/Frontend/src/: App.tsx  index.css
apps/Frontend/src/components/: ActiveMarkets.tsx  Capabilities.tsx  Footer.tsx  Hero.tsx  InitializationSequence.tsx  Navbar.tsx  Sidebar.tsx
apps/Frontend/src/hooks/: usePythPrice.ts
apps/Frontend/src/pages/: AdminDashboard.tsx  CreateMarket.tsx  Login.tsx  MarketPortfolio.tsx  MarketsTerminal.tsx  Orders.tsx  Payouts.tsx  Portfolio.tsx  Profile.tsx  ResolveMarket.tsx  SignUp.tsx  TradingTerminal.tsx  UserDashboard.tsx
apps/api-gateway/: README.md  package.json  tsconfig.json
apps/api-gateway/src/: elysia.d.ts  index.ts
apps/api-gateway/src/grpc/: userClient.ts
apps/api-gateway/src/plugins/: auth.ts  rateLimit.ts
apps/api-gateway/src/routes/: auth.ts  balance.ts  deposite.ts  market.ts  orders.ts  payout.ts  portfolio.ts  price.ts  public.ts  wallet.ts  withdrawals.ts
apps/api-gateway/src/scripts/: create-admin.ts  settle-market.ts
apps/api-gateway/src/tsIdl/: escrow_vault.ts  resolution_adapter.ts
apps/api-gateway/src/types/: index.ts
apps/indexer-service/: README.md  package.json
apps/indexer-service/src/: index.ts
apps/indexer-service/src/service/: DepositIndexer.ts  webhook.ts
apps/indexer-service/test/: manual.ts  test-deposit.ts
apps/market-service/: README.md  package.json
apps/market-service/src/idl/: market_registry.json  resolution_adapter.json
apps/market-service/src/services/: MarketManager.ts  MarketService.ts
apps/matching-engine/: .gitignore  Cargo.toml  build.rs
apps/matching-engine/proto/: matching_engine.proto
apps/matching-engine/src/: config.rs  grpc_server.rs  main.rs  matcher.rs  order.rs  orderbook.rs  redis_client.rs  trade.rs
apps/order-service/: README.md  package.json
apps/order-service/proto/: matching_engine.proto
apps/order-service/src/client/: MatchingEngineClient.ts
apps/order-service/src/services/: OrderService.ts
apps/resolution-adapter/: README.md  package.json
apps/resolution-adapter/src/: index.ts  types.ts
apps/resolution-adapter/src/adapter/: cricket-adapter.ts  pyth-adapter.ts
apps/resolution-adapter/src/idl/: escrow_vault.json
apps/resolution-adapter/src/services/: resolution-service.ts
apps/resolution-adapter/src/solana/: resolution-client.ts
apps/resolution-adapter/src/tsIdl/: market_registry.ts
apps/settlement-worker/: Cargo.toml
apps/settlement-worker/src/: config.rs  database.rs  main.rs  redis_client.rs  solana_client.rs  types.rs
apps/user-services/: README.md  package.json
apps/user-services/src/: index.ts
apps/user-services/src/redis/: index.ts
apps/web/: package.json
apps/web/app/: page.tsx  providers.tsx
apps/withdrawal-worker/: Cargo.toml
apps/withdrawal-worker/src/: config.rs  main.rs  types.rs
(+12 files in other folders)
