[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Data structures
dashmap = "5.5"              # Concurrent HashMap
ordered-float = "4.2"        # Ordered floating point
uuid = { version = "1.6", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "tokio-native-tls-comp"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Config
dotenv = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal
rust_decimal = { version = "1.33", features = ["serde"] }

[build-dependencies]
tonic-build = "0.11"