[package]
name = "settlement-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# ---------------------------
# Solana (Backend-safe setup)
# ---------------------------
solana-client = "2.0"
solana-sdk = "2.0"

# SPL CLIENT crates (NOT on-chain program crates)

spl-token = { version = "6", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }

# Database
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["db-postgres"] }
dotenv = "0.15"
bs58 = "0.5"