[package]
name = "withdrawal-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"

# Solana
solana-client = "2.0"
solana-sdk = "2.0"
spl-token = {version="6.0",features = ["no-entrypoint"]}
spl-associated-token-account = {version="6.0",features=["no-entrypoint"]}

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde","clock"] }
rust_decimal = { version = "1.33", features = ["serde","db-postgres"] }
dotenv = "0.15"
bs58 = "0.5"
